<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Dashboard">


    <RelativeLayout
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_view">


    </RelativeLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        android:alpha="0.6"
        app:cardCornerRadius="28dp"
        tools:ignore="VisualLintBounds">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">


            <TextView
                android:id="@+id/Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/LoginInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:alpha="0.8"
                android:text="@string/login_your_information_text"
                android:textColor="#0C0C0C"
                tools:ignore="TextContrastCheck" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/email_address_text"
                android:textColor="#0E0E0E"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_done_24"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/password_text"
                android:textStyle="bold"
                android:textColor="#0E0E0E"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:alpha="0.8"
                    android:text="@string/remember_me_text"
                    android:textColor="#0E0E0E"
                    tools:ignore="RelativeOverlap,TextContrastCheck" />

                <TextView
                    android:id="@+id/ForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_password_text"
                    tools:ignore="RelativeOverlap,TextContrastCheck"
                    android:textColor="#0E0E0E"/>
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login_text"
                tools:ignore="TextContrastCheck,VisualLintButtonSize"
                android:textColor="#0E0E0E"/>


            <TextView
                android:id="@+id/Choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.8"
                android:text="@string/choose_to_login_with_text"
                tools:ignore="TextContrastCheck,TextContrastCheck"
                android:textColor="#0E0E0E"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@id/image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/fb"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:id="@id/image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/google"
                    android:importantForAccessibility="no"
                    tools:ignore="ImageContrastCheck,ImageContrastCheck" />

                <ImageView
                    android:id="@id/image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/tweet"
                    android:importantForAccessibility="no"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@id/image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/insta"
                    android:importantForAccessibility="no" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>